crea el landing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,7 @@
 <a routerLink="/popup">Susbribe news popup</a>
 <br>
 <a routerLink="/csschanger">Css Live changer</a>
+<br>
+<a routerLink="/charactercount">Character Count</a>
+<br>
+<a routerLink="/randomnum">Random number</a>
