--- a/src/app/projects/random-number-generator/random-number-generator.component.html
+++ b/src/app/projects/random-number-generator/random-number-generator.component.html
@@ -1,1 +1,5 @@
-<p>random-number-generator works!</p>
+<div class="container">
+    <h1>Random Number Generator</h1>
+    <button (click)="generateRandomNumber()">Generate Random Number</button>
+    <p id="result">{{ randomNumber }}</p>
+  </div>
