--- a/src/app/projects/live-character-count/live-character-count.component.html
+++ b/src/app/projects/live-character-count/live-character-count.component.html
@@ -1,1 +1,12 @@
-<p>live-character-count works!</p>
+<div class="container">
+    <h2>Live Character Counter</h2>
+    <textarea 
+      name="textarea"
+      id="textarea"
+      cols="30"
+      rows="10"
+      placeholder="Write your text here !!"
+      (keyup)="countingCharacters()"
+    ></textarea>
+    <p>Total Characters you typed including space: <span class="counter">{{ characterCount }}</span></p>
+  </div>
