--- a/src/app/projects/day-of-the-week/day-of-the-week.component.html
+++ b/src/app/projects/day-of-the-week/day-of-the-week.component.html
@@ -1,1 +1,9 @@
-<p>day-of-the-week works!</p>
+<div class="container">
+    <h1>Today is:</h1>
+    <div class="weekday">
+        <span id="weekday">{{ theDayIs }}</span>
+        <br>
+        <br>
+        <span id="quote">{{ quote }}</span>
+    </div>
+</div>
