--- a/src/app/projects/stop-watch/stop-watch.component.html
+++ b/src/app/projects/stop-watch/stop-watch.component.html
@@ -1,1 +1,13 @@
-<p>stop-watch works!</p>
+
+<div class="container">
+    <h1>Stopwatch</h1>
+    <div class="time">
+        <span class="seconds">00</span> :
+        <span class="milli">00</span>
+    </div>
+    <div class="button-container">
+        <button class="start">Start</button>
+        <button class="stop">Stop</button>
+        <button class="reset">Reset</button>
+    </div>
+</div>
